--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
+
+    <style>
+        *{
+            margin: 0; padding: 0; box-sizing: border-box;
+        }
+        body{
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 <body>
     
