--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>Discord | Your Place to Talk and Hang Out</title>
 
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
+
+    <!-- icon library -->
+    <script src="https://unpkg.com/feather-icons"></script>
 
     <style>
         *{
@@ -19,6 +22,74 @@
     </style>
 </head>
 <body>
-    
+    <!-- navbar start -->
+    <div class="bg-[#404EED] font-ggSans w-full">
+        <nav class="flex lg:justify-between justify-evenly items-center lg:mx-auto h-[72px] pt-1 lg:px-10 px-0">
+            <!-- logo start -->
+            <img src="./images/logo.svg" alt="logo">
+            <!-- logo end -->
+
+            <!-- nav items start -->
+            <ul class="hidden lg:flex space-x-12 items-center text-white font-ggSans text-[16px] font-semibold">
+                <li class="hover:underline">
+                    <a href="#">Download</a>
+                </li>
+                <li class="hover:underline">
+                    <a href="#">Nitro</a>
+                </li>
+                <li class="hover:underline">
+                    <a href="#">Safety</a>
+                </li>
+                <li class="hover:underline">
+                    <a href="#">Support</a>
+                </li>
+                <li class="hover:underline">
+                    <a href="#">Blog</a>
+                </li>
+                <li class="hover:underline">
+                    <a href="#">Careers</a>
+                </li>
+            </ul>
+            <!-- nav items end -->
+
+            <div class="flex justify-around">
+                <!-- button start -->
+            <button class="bg-white px-4 self-center p-2 text-[#2c2f33] rounded-full font-[500] text-[14px] mr-[16px]">
+                Login
+            </button>
+            <!-- button end -->
+
+            <!-- hamburger start -->
+            <i data-feather="menu" class="text-white font-extrabold mt-2 cursor-pointer lg:hidden"></i>
+            <!-- hamburger end -->
+            </div>
+            
+        </nav>
+    </div>
+    <!-- navbar end -->
+
+    <!-- hero section start -->
+    <!-- hero section end -->    
+
+    <!-- section 1 start -->
+    <!-- section 1 end -->
+
+    <!-- section 1 start -->
+    <!-- section 1 end -->
+
+    <!-- section 1 start -->
+    <!-- section 1 end -->
+
+    <!-- section 1 start -->
+    <!-- section 1 end -->
+
+    <!-- footer start -->
+    <!-- footer end -->
+
+
+    <script>
+        // feather icons < - - - https://github.com/feathericons/feather#feather
+        feather.replace();
+    </script>
 </body>
 </html>
